new build files

--- a/src/javascript/templates/patient1/patient1View16.hbs
+++ b/src/javascript/templates/patient1/patient1View16.hbs
@@ -54,7 +54,7 @@
   Molecular tests evaluate DNA, genes, or proteins in tumor tissue. Genes encode proteins and proteins dictate cell function.      </blockquote>
     <main id="content-main" class="row patient-1">
 
-      <p>This lab is equipped to perform three different tests.
+      <p>This lab is equipped to perform three different tests.</p>
 
   <ul class="specs">
       <li>
@@ -66,7 +66,6 @@
           <strong>&mdash;</strong> OncoType DX®
         </li>
   </ul>
-      </p>
          <figure>
            <img src="images/double_helix.jpg" alt="" />
          </figure>
