--- a/src/javascript/templates/patient1/patient1View18.hbs
+++ b/src/javascript/templates/patient1/patient1View18.hbs
@@ -68,7 +68,7 @@ A second antibody binds to the first and color develops where this antibody bind
 
 
                 </p>
-              <span class="left-arrow"><a href="/patient1view12" data-navigate="patient1view12">&#8594;</a></span>
+              <span class="left-arrow"><a href="/patient1view19" data-navigate="patient1view19">&#8594;</a></span>
 
           </div>
       </div>
@@ -81,7 +81,7 @@ A second antibody binds to the first and color develops where this antibody bind
 
               </div>
               <div class="col-md-4">
-                <a data-navigate="patient1view19" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                <a data-navigate="patient1view19" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
               </div>
             </div>
         </div>
