--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -56,7 +56,7 @@
       <main id="content-main" class="row patient-1">
 
           <div class="table">
-              <div class="col-md-4">
+              <div class="col-md-4 table-col">
                   <h2>HER2 FISH Result</h2>
                   <div class="row">
                       <div class="col-md-12">
@@ -73,7 +73,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 table-col">
                   <h2>HER2/CEP17 ratio</h2>
                   <div class="row">
                       <div class="col-md-12">
@@ -91,7 +91,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 table-col">
                   <h2>Amount of HER2 protein
                   </h2>
                   <div class="row">
@@ -109,7 +109,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 table-col">
                   <h2>Impact on cancer growth
                   </h2>
                   <div class="row">
@@ -127,7 +127,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 table-col">
                   <h2>Implication for treatment
                   </h2>
                   <div class="row">
