--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -65,7 +65,7 @@ The slide is heated at 82° C to denature the sample.
 
 
                 </p>
-              <span class="left-arrow"><a href="/patient1view12" data-navigate="patient1view12">&#8594;</a></span>
+              <span class="left-arrow"><a href="/patient1view23" data-navigate="patient1view23">&#8594;</a></span>
 
           </div>
       </div>
@@ -79,7 +79,7 @@ The slide is heated at 82° C to denature the sample.
 
               </div>
               <div class="col-md-4">
-                <a data-navigate="patient1view23" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                <a data-navigate="patient1view23" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
               </div>
             </div>
         </div>
