--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -73,7 +73,7 @@
                   <p>
                     <strong>Step 2</strong>
 The sample is washed in a buffer agent.</p>
-                    <span class="left-arrow">&#8594;</span>
+                    <span class="left-arrow"><a  data-navigate="patient1view24">&#8594;</a></span>
 
               </div>
           </div>
@@ -89,7 +89,7 @@ The sample is washed in a buffer agent.</p>
                     </div>
                     <div class="col-md-4">
                         <a data-navigate="patient1view24" class="continue next">
-                            <button type="button" name="button">Next &#8594;</button>
+                            <button class="muted" type="button" name="button">Next &#8594;</button>
                         </a>
                     </div>
                 </div>
