--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -48,11 +48,11 @@
 </p>
          <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
-            
-              
-            
+
+
+
          </figure>
-         <p><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
+         <p class="no-top-pad"><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
 </p>
 
          <div class="row continue-container background-nav-blue">
