--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -48,7 +48,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
 
 
 </p>
-<strong>TO-DO MULTIPLE CHOICE</strong>
+<p class="no-other-pad"><strong>TO-DO MULTIPLE CHOICE</strong></p>
 <p>
 Hormone blocking therapy only<br>
  Chemotherapy followed by hormone blocking therapy<br>
@@ -60,9 +60,9 @@ Student makes selection.  Feedback given.
 </p>
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
-            
-              
-            
+
+
+
          </figure> -->
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
