--- a/src/javascript/templates/patient3/patient3view1.hbs
+++ b/src/javascript/templates/patient3/patient3view1.hbs
@@ -2,9 +2,9 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
-        <ul class="background-purple margin-bottom-0">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
@@ -40,19 +40,20 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-  In this segment of the Decoding Cancer Virtual Lab, you will evaluate Michele’s breast cancer and conduct tests to recommend a treatment plan.
+In this segment of the Decoding Cancer Virtual Lab, you will evaluate Brittany’s breast cancer and conduct tests to recommend a treatment plan.
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-3">
 
-      <p>Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
+      <p>Brittany Featherston is a 39-year old female. During her monthly self-breast exam, Brittany felt a lump in her left breast and immediately consulted her physician.  Her physician ordered a mammogram.
+
 </p>
          <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
-            
-              
-            
+
+
+
          </figure>
-         <p><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
+         <p><strong>As you progress through the Virtual Lab,  be sure to record Brittany’s test results and your notes in your Lab Handbook.  </strong>
 </p>
 
          <div class="row continue-container background-nav-blue">
@@ -64,7 +65,7 @@
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view2" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view2" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
