--- a/src/javascript/templates/patient3/patient3view11.hbs
+++ b/src/javascript/templates/patient3/patient3view11.hbs
@@ -2,14 +2,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
         <ul>
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-        <ul class="background-purple">
+        <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -42,9 +42,9 @@
     <blockquote>
     Dr. You: Make a Decision
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-3">
 
-      <p>What are the implications of Michele’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.
+      <p>What are the implications of Brittany's test results on her treatment plan?  Record your thoughts in your Lab Handbook.
 
 </p>
 <p>
@@ -55,9 +55,9 @@ Do you have enough information to make a recommendation for treatment or do you 
 </p>
          <!-- <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
-            
-              
-            
+
+
+
          </figure> -->
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
@@ -77,7 +77,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                        <h2>Select Treatment:  You do not have enough information to select treatment for your patient.  Please continue to next test.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient2view12"><button  name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient3view12"><button  name="button">Next &#8594;</button></a>
                        </div>
                      </div>
                    </div>
@@ -89,7 +89,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view12" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
+                 <a data-navigate="patient3view12" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
                </div>
              </div>
          </div>
