--- a/src/javascript/templates/patient3/patient3view3.hbs
+++ b/src/javascript/templates/patient3/patient3view3.hbs
@@ -2,14 +2,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
-        <ul class="background-purple margin-bottom-0">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -40,26 +40,27 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-  Here is Michele’s mammogram.    </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+  Here is Brittany’s mammogram.    </blockquote>
+    <main id="content-main" class="row patient-3 top-gray">
 
       <div class="header-gray">
         <div class="col-md-3">
           <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
         </div>
         <div class="col-md-9">
-          <h4><b>Patient Overview</b> Look at the abnormality in Michele’s mammogram.  Which of the objects is closest to the size of the  abnormality?
+          <h4>Look at the abnormality in Brittany’s mammogram.  Which of the objects is closest to the size of the  abnormality?
+
 </h4>
 
         </div>
       </div>
-      <p>Her physician spotted abnormal tissue during a routine mammogram.
-Michele has never had breast cancer before.</p>
+      <p><strong>Be sure to record this information in your Lab Handbook.</strong>
+</p>
          <figure class="m-bottom">
            <img src="images/p1screen3.png" alt="" />
-            
-              
-            
+
+
+
          </figure>
          <p>Her physician spotted abnormal tissue during a routine mammogram.</p>
          <svg version="1.1" id="pick-a-size" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -115,13 +116,13 @@ Michele has never had breast cancer before.</p>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view2" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view2" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view4" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view4" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
