--- a/src/javascript/templates/patient3/patient3view5.hbs
+++ b/src/javascript/templates/patient3/patient3view5.hbs
@@ -3,14 +3,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
-        <ul class="background-purple margin-bottom-0">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -41,9 +41,9 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Michele had a left breast biopsy. Let’s evaluate the tissue.
+Brittany had a left breast biopsy. Let’s evaluate the tissue.
   </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+    <main id="content-main" class="row patient-3 top-gray">
 
       <div class="header-gray">
         <div class="col-md-3">
@@ -60,7 +60,7 @@
 <ul class="specs">
   <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
   <li><strong>Laterality:</strong> left</li>
-  <li><strong>Tumor size:</strong>1 cm</li>
+  <li><strong>Tumor size:</strong>3.5 cm</li>
 
 </ul>
 <figure>
@@ -73,13 +73,13 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view4" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view4" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view6" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view6" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
