--- a/src/javascript/templates/patient3/patient3view6.hbs
+++ b/src/javascript/templates/patient3/patient3view6.hbs
@@ -2,14 +2,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
         <ul>
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -40,9 +40,9 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-The pathologist examined Michele’s tissue and has provided a pathology report.
+The pathologist examined Brittany’s tissue and has provided a pathology report.
     </blockquote>
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-3">
 
       <div class="header-gray">
         <div class="col-md-3">
@@ -50,7 +50,7 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
         </div>
         <div class="col-md-9">
           <h4><b>Patient Overview</b>
-            Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.</h4>
+            Here is important information about Brittany's tissue sample.  Be sure to record it in your Lab Handbook.</h4>
 
         </div>
       </div>
@@ -58,8 +58,8 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
         <ul class="specs">
           <li><strong>Final Diagnosis: </strong>   Infiltrating ductal carcinoma</li>
           <li><strong>Histological Grade:</strong> 3</li>
-          <li><strong>Stage:</strong>1</li>
-          <li><strong>Number of nodes examined:</strong>2</li>
+          <li><strong>Stage:</strong>2</li>
+          <li><strong>Number of nodes examined:</strong>5</li>
           <li><strong>Number of positive nodes:</strong>0</li>
 
         </ul>
@@ -68,13 +68,13 @@ The pathologist examined Michele’s tissue and has provided a pathology report.
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view5" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view5" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view7" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view7" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
