--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -27,11 +27,13 @@
     </div>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
+  <div class="overlay-purple"></div>
     <div class="col-md-5 no-pad">
       <img class="patient2" src="images/patient1-final.jpg">
+      <img class="up-next finished" src="images/completed.png" alt="" />
     </div>
     <div class="col-md-7 no-pad">
-      <a class="no-link-color" href="/patient2view1" data-navigate="patient2view1">
+      <img class="lock" src="images/medical.png" alt="" />
         <div class="patient-title background-purple">
             <h4>patient no2</h4>
             <h3>Michele Johnson</h3>
@@ -42,16 +44,14 @@
                 <a href="/patient2view1" data-navigate="patient2view1">Click here to continue.</a>
             </p>
         </div>
-      </a>
     </div>
 </div>
-<div class="pick-patient col-md-8 col-md-offset-2 locked">
+<div class="pick-patient col-md-8 col-md-offset-2">
   <div class="col-md-5 no-pad">
     <img class="patient3" src="images/patient2-final.jpg">
-    <img class="up-next" src="images/up-next.png" alt="" />
   </div>
-  <div class="col-md-7 no-pad locked">
-    <img class="lock" src="images/locked.png" alt="" />
+  <div class="col-md-7 no-pad">
+    <a class="no-link-color2" href="/patient3view1" data-navigate="patient3view1">
   <div class="patient-title background-green">
     <h4>patient no3</h4>
     <h3>Brittany Featherston</h3>
@@ -61,6 +61,6 @@
         Brittany is a 39&mdash;year old female. She was successfully treated for breast cancer at the age of 32. During her monthly self-breast exam, Brittany felt a lump in her left breast and immediately consulted her physician, who ordered a mammogram.
       </p>
     </div>
-
+</a>
   </div>
 </div>
