--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -77,7 +77,7 @@
 
                 </div>
                 <div class="col-md-4">
-                  <a data-navigate="patient1view18" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                  <a data-navigate="patient1view18" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                 </div>
               </div>
           </div>
