--- a/src/javascript/templates/patient1/patient1View24.hbs
+++ b/src/javascript/templates/patient1/patient1View24.hbs
@@ -75,7 +75,7 @@
                   <strong>Step 3</strong>
               Step 3:  The slides are dehydrated in ethanol and air-dried.
 </p>
-                  <span class="left-arrow"><a href="/patient1view12" data-navigate="patient1view12">&#8594;</a></span>
+                  <span class="left-arrow"><a href="/patient1view25" data-navigate="patient1view25">&#8594;</a></span>
 
             </div>
         </div>
@@ -90,7 +90,7 @@
 
               </div>
               <div class="col-md-4">
-                <a data-navigate="patient1view25" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                <a data-navigate="patient1view25" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
               </div>
             </div>
         </div>
