--- a/src/javascript/templates/patient1/patient1View25.hbs
+++ b/src/javascript/templates/patient1/patient1View25.hbs
@@ -62,7 +62,7 @@
                       <strong>Step 4</strong>
   The medium that contains the fluorescent dye is applied to the slide.
                     </p>
-                      <span class="left-arrow"><a href="/patient1view12" data-navigate="patient1view12">&#8594;</a></span>
+                      <span class="left-arrow"><a href="startview2" data-navigate="startview2">&#8594;</a></span>
 
                 </div>
             </div>
