--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -3,14 +3,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
-        <ul class="background-purple margin-bottom-0">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -43,7 +43,7 @@
     <blockquote>
       Michele’s tissue sample has been sent for HER2 FISH testing.
   </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+    <main id="content-main" class="row patient-3 top-gray">
 
 
       <p>Click on the microscope to analyze Michele’s tissue sample.  Calculate the ratio of red dots to green dots.
@@ -68,13 +68,13 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view9" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view9" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view11" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view11" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
