--- a/src/javascript/templates/patient3/patient3view2.hbs
+++ b/src/javascript/templates/patient3/patient3view2.hbs
@@ -14,14 +14,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
         <ul>
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -52,12 +52,12 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
 
-    <main id="content-main" class="row patient-2">
+    <main id="content-main" class="row patient-3">
       <blockquote>
-        Here is Michele’s mammogram.
+        Here is Brittany's mammogram.
       </blockquote>
       <p>
-        Review Michele’s mammogram and click on an area that shows abnormalities.
+Review Brittany’s mammogram and click on an area that shows abnormalities.
 
       </p>
       <div class="svg-container">
@@ -83,7 +83,7 @@
           <div class="row continue-container background-nav-blue">
               <div class="col-md-12 no-pad text-center">
                 <div class="col-md-4">
-                  <a class="previous"  data-navigate="patient2view1"><button class="" type="button" name="button">Previous</button></a>
+                  <a class="previous"  data-navigate="patient3view1"><button class="" type="button" name="button">Previous</button></a>
                 </div>
                 <div class="col-md-4 line-across">
 
@@ -102,7 +102,7 @@
                           <h2>Correct! The area you clicked on indicates abnormal breast tissue.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
-                          <a data-navigate="patient2view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient3view3" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
 
                         </div>
                       </div>
