--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -3,14 +3,14 @@
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
-      <nav class="side-nav background-purple">
-        <img class="patient2" src="images/patient1-final.jpg">
-        <ul class="background-purple margin-bottom-0">
+      <nav class="side-nav background-green">
+        <img class="patient2" src="images/patient2-final.jpg">
+        <ul class="background-green margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="background-green">
             <li><span></span></li>
             <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
           </ul>
@@ -41,21 +41,24 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-Michele’s tissue sample has been sent for ER testing.  </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+Brittany’s tissue sample has been sent for HER2 FISH testing.
+ </blockquote>
+    <main id="content-main" class="row patient-3 top-gray">
 
       <div class="header-gray">
         <div class="col-md-3">
           <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
         </div>
         <div class="col-md-9">
-          <h4>Click the microscope to conduct the ER Test.
+          <h4>Click on the microscope to analyze Brittany’s tissue sample.  Calculate the ratio of red dots to green dots.
+
 
 </h4>
 
         </div>
       </div>
-      <p>Are Michele’s ER test results positive or negative?  <br><br>
+      <p>Are the results amplified or not amplified?
+ <br><br>
 <strong>Be sure to record this information in the Lab Handbook.
 </strong>
 </p>
@@ -75,13 +78,13 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view7" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient3view7" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view9" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient3view9" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
