--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -13,7 +13,7 @@
         <img class="patient1" src="images/patient3-final.jpg">
     </div>
     <div class="col-md-7 no-pad">
-      <a class="no-link-color" href="/patient1view1" data-navigate="patient1view1">
+      <a class="no-link-color2" href="/patient1view1" data-navigate="patient1view1">
         <div class="patient-title background-pink">
             <h4>patient no .01</h4>
             <h3>Velma Belt</h3>
@@ -47,7 +47,6 @@
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
   <div class="col-md-5 no-pad">
     <img class="patient3" src="images/patient2-final.jpg">
-    <img class="up-next" src="images/up-next.png" alt="" />
   </div>
   <div class="col-md-7 no-pad ">
     <img class="lock" src="images/locked.png" alt="" />
