fixed buttons on view9 and fixed copy for popups from next to continue

--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -45,12 +45,17 @@
       Look at the abnormality in Velma’s mammogram.  Which of the objects is closest to the size of the  abnormality?
 
       </p>
-      <figure>
-        <img src="images/p1screen3.png" alt="" />
-      </figure>
+      <div class="svg-container">
+        <div class="svg-text2">Click the area that shows an abnormality.</div>
+        <figure>
+          <img src="images/p1screen3.png" alt="" />
+        </figure>
+      </div>
+
       <p>
         Select the object that is closet to the size of the abnormality.
       </p>
+
 
 <svg version="1.1" id="pick-a-size" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="100%" height="100%" viewBox="-14 283 639 225" enable-background="new -14 283 639 225" xml:space="preserve">
@@ -111,7 +116,7 @@
       <div class="col-md-4 line-across"></div>
       <div class="col-md-4">
         <!-- Button trigger modal -->
-        <a class="continue next"><button type="button muted" style="color: gray;cursor:default;" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+        <a class="continue next"><button type="button muted" style="color: gray;cursor:default;" data-toggle="modal" data-target="#myModal"  name="button">Submit &#8594;</button></a>
         <!-- Modal -->
         <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
