--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -78,7 +78,7 @@ Velma’s breast tissue sample
 
 
                      <div class="col-md-2 yes-no col-sm-offset-3">
-                       <a  class="continue next"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No</button></a>
+                       <a  class="continue next"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No <span class="check-mark">&#x2717;</span></button></a>
                        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
@@ -86,7 +86,7 @@ Velma’s breast tissue sample
                              <h2><span class="pink-hl">Incorrect.</span> The slide does contain cancer cells.</h2>
                              </div>
                              <div class="modal-footer background-nav-blue">
-                               <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                               <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
 
                              </div>
                            </div>
@@ -94,7 +94,7 @@ Velma’s breast tissue sample
                        </div>
                      </div>
                      <div class="col-md-2  col-sm-offset-2 yes-no">
-                       <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes</button></a>
+                       <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes <span class="check-mark">&#x2713;</span></button></a>
 
                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
@@ -103,7 +103,7 @@ Velma’s breast tissue sample
                              <h2><span class="pink-hl">Correct!</span> The slide does contain cancer cells.</h2>
                              </div>
                              <div class="modal-footer background-nav-blue">
-                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
 
                              </div>
                            </div>
