--- a/src/javascript/templates/sideNavIntro.hbs
+++ b/src/javascript/templates/sideNavIntro.hbs
@@ -2,21 +2,21 @@
 
   <nav id="side-nav-intro" class="side-nav background-dark-blue">
     <ul>
-      <li><h3>{{ intro1.title }}</h3></li>
-      <li>{{ intro1.text}}</li>
+      <li style="padding-top: 13px;"><h3>{{ intro1.title }}</h3></li>
+      <li style="padding-bottom:1em;">{{ intro1.text}}</li>
     </ul>
   </nav>
 
   <nav id="side-nav-1" style="display: none;" class="side-nav background-dark-blue">
     <ul>
-      <li><h3>{{ intro2.title }}</h3></li>
-      <li>{{ intro2.text}}</li>
+      <li style="padding-top: 13px;"><h3>{{ intro2.title }}</h3></li>
+      <li style="padding-bottom:1em;">{{ intro2.text}}</li>
     </ul>
   </nav>
 
   <nav id="side-nav-2" style="display: none;" class="side-nav background-dark-blue">
     <ul>
-      <li><h3>{{ intro3.title }}</h3></li>
-      <li>{{ intro3.text}}</li>
+      <li style="padding-top: 13px;"><h3>{{ intro3.title }}</h3></li>
+      <li style="padding-bottom:1em;">{{ intro3.text}}</li>
     </ul>
   </nav>
