--- a/src/javascript/templates/startView3.hbs
+++ b/src/javascript/templates/startView3.hbs
@@ -16,7 +16,7 @@
     <div class="col-md-7 no-pad ">
       <img class="lock" src="images/medical.png" alt="" />
         <div class="patient-title background-pink">
-            <h4>patient no1</h4>
+            <h4>patient no. 01</h4>
             <h3>Velma Whatever</h3>
         </div>
         <div class="row patient-copy">
@@ -35,7 +35,7 @@
     <div class="col-md-7 no-pad">
       <img class="lock" src="images/medical.png" alt="" />
         <div class="patient-title background-purple">
-            <h4>patient no2</h4>
+            <h4>patient no. 02</h4>
             <h3>Michele Johnson</h3>
         </div>
         <div class="row patient-copy">
@@ -53,7 +53,7 @@
   <div class="col-md-7 no-pad">
     <a class="no-link-color2" href="/patient3view1" data-navigate="patient3view1">
   <div class="patient-title background-green">
-    <h4>patient no3</h4>
+    <h4>patient no. 03</h4>
     <h3>Brittany Featherston</h3>
   </div>
     <div class="row patient-copy">
